2011-04-22  Justin Schuh  <jschuh@chromium.org>

Reviewed by Eric Seidel.

        Should assert on invalid type in FEComponentTransfer::apply
        https://bugs.webkit.org/show_bug.cgi?id=57959

        No functional change. No new tests needed.

        * platform/graphics/filters/FEComponentTransfer.cpp:
        (WebCore::FEComponentTransfer::apply):

Canonical link: https://commits.webkit.org/74388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84653 268f45cc-cd09-0410-ab3c-d52691b4dbfc